Make last child on header on mobile have the correct spacing

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -581,6 +581,10 @@ p, a {
 		margin-right: -15px;
 	}
 
+	.site-nav .page-link:last-child {
+    	margin-right: 15px;
+	}
+
 
 	#sticky-footer-content .p1 {
 		height: 3.4em;
